Sutter Health/src/objects/Employer_Group_Data__c.object
<CustomObject>
    <fields>
        <fullName>State_SA__c</fullName>
        <description>This field split from &quot;City / State / Zip Code&quot;</description>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Address of the employee</description>
        <label>Street Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Account_Data__c</fullName>
        <label>Sub-Account Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Account_Id__c</fullName>
        <formula>IF(Sold_Sign_Off__c &lt;&gt; NULL , Sold_Sign_Off__r.Tech_Account_Id__c, Opportunity__r.AccountId)</formula>
        <label>Tech Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Cloned_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Cloned Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Party_Administrator__c</fullName>
        <label>Third Party Administrator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Elapsed__c</fullName>
        <formula>NOW()- Draft_Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Elapsed</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title1__c</fullName>
        <description>This field split from HR Employer Portal Access - Name, Title, Phone, E-mail</description>
        <inlineHelpText>HR Employer Portal Access -  Title</inlineHelpText>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This field split from HR Employer Portal Access - Name, Title, Phone, E-mail</description>
        <inlineHelpText>Employer Portal Access - Title</inlineHelpText>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Aging__c</fullName>
        <formula>IF( ISPICKVAL(Stage__c, &apos;Approved&apos;)  , 0, ABS(ROUND( 9 * ( 
( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 9) ) / 7) + 
MIN(5, 
MOD( DATEVALUE(NOW() ) - DATE( 1900, 1, 9), 7) + 
MIN( 1, 24 / 9 * ( MOD(NOW() - DATETIMEVALUE( &apos;1900-01-09 15:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 9) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 24 / 9 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-09 15:00:00&apos; ), 1) ) ) 
) 
) 
), 
0 )/9
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Aging(Days)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Organization_Other__c</fullName>
        <description>it will display when user select &quot;Type of Organization&quot; is &quot;Other&quot;</description>
        <label>Type Of Organization Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Organization__c</fullName>
        <label>Type of Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriting_Start_Time__c</fullName>
        <label>Underwriting Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Underwriting_hours__c</fullName>
        <label>Underwriting hours</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Employer_Group_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Employer Group Data</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employer_Group_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Email__c</fullName>
        <label>Vendor Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Archive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sold Case Notification (Vendor Contact Name)</relationshipLabel>
        <relationshipName>Sold_Case_Notification1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Phone__c</fullName>
        <label>Vendor Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_there_be_additional_plans_offered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will There Be Additional  Renewal Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_BA__c</fullName>
        <description>This field split from &quot;City / State / Zip Code&quot;</description>
        <label>Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_SA__c</fullName>
        <description>This field split from &quot;City / State / Zip Code&quot;</description>
        <label>Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city_SA__c</fullName>
        <description>This field split from &quot;City / State / Zip Code&quot;</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Eligible_Employees__c</fullName>
        <label># of Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Employees__c</fullName>
        <label>Total FTE Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sold Case Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>of_Eligible_Employees__c</columns>
        <columns>SHP_Sales_Representative__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Broker_Agency__c</columns>
        <columns>Broker_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_SCN</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>of_Eligible_Employees__c</columns>
        <columns>ACal_L_D_Expiration_Date__c</columns>
        <columns>BillingContact_Name__c</columns>
        <columns>Billing_Contact_Phone__c</columns>
        <columns>Billing_Contact_E_mail__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved SCN</label>
        <queue>SHP_Enrollment_SCN</queue>
        <sharedTo>
            <group>SHP_Enrollment_SCN</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_SCN</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Group_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Stage__c</columns>
        <filterScope>Mine</filterScope>
        <label>My SCN</label>
    </listViews>
    <listViews>
        <fullName>SHP_Enrollment_QA_queue_Employer_Group_Data</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Company_Name__c</columns>
        <columns>DBA_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Submitted for QA</value>
        </filters>
        <label>SHP Enrollment QA queue</label>
        <queue>SHP_Enrollment_QA_queue</queue>
        <sharedTo>
            <group>Enrollment_QA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Enrollment_SCN_Employer_Group_Data</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Company_Name__c</columns>
        <columns>DBA_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Created_By__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>of_Eligible_Employees__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Completed,Enrollment QA Pass,Enrollment QA Fail</value>
        </filters>
        <label>SHP Enrollment SCN</label>
        <queue>SHP_Enrollment_SCN</queue>
        <sharedTo>
            <group>SHP_Enrollment_SCN</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Sales_Queue_Employer_Group_Data</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Sales Queue</label>
        <queue>SHP_Sales_Queue</queue>
        <sharedTo>
            <group>SHP_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Underwriter_Queue_Employer_Group_Data</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Underwriter Queue</label>
        <queue>SHP_Underwriter_Queue</queue>
        <sharedTo>
            <group>Underwriter</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SCN-{00000}</displayFormat>
        <label>Sold Case Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sold Case Notification</pluralLabel>
    <recordTypes>
        <fullName>Cloned_SCN</fullName>
        <active>true</active>
        <label>Cloned SCN</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Submitter__c</fullName>
        <label>Submitter</label>
    </sharingReasons>
    <validationRules>
        <fullName>Commissions_Optional_Acu_Chiro_Other</fullName>
        <active>true</active>
        <description>This rule is used to restrict the user to enter Other Reason if they Select Commissions_Optional_Acu-Chiro as Other</description>
        <errorConditionFormula>AND(ISPICKVAL(Commissions_Optional_Acu_Chiro_ACN__c,&quot;Other&quot;),ISBLANK(Other_Optional_Acu_Chiro__c))</errorConditionFormula>
        <errorDisplayField>Other_Optional_Acu_Chiro__c</errorDisplayField>
        <errorMessage>Please enter reason for Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Commissions_Optional_Dental_Delta_Other</fullName>
        <active>true</active>
        <description>This rule is used to restrict the user to enter Other Reason if they Select Commissions_Optional_Dental_Delta as Other</description>
        <errorConditionFormula>AND(ISPICKVAL(Commissions_Optional_Dental_Delta__c,&quot;Other&quot;),ISBLANK(Other_Optional_Dental__c))</errorConditionFormula>
        <errorDisplayField>Other_Optional_Dental__c</errorDisplayField>
        <errorMessage>Please enter reason for Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Commissions_Optional_Vision_VSP_Other</fullName>
        <active>true</active>
        <description>This rule is used to restrict the user to enter Other Reason if they Select Commissions_Optional_Vision_(VSP) as Other</description>
        <errorConditionFormula>AND(ISPICKVAL(Commissions_Optional_Vision_VSP__c,&quot;Other&quot;),ISBLANK(Other_Optional_Vision__c))</errorConditionFormula>
        <errorDisplayField>Other_Optional_Vision__c</errorDisplayField>
        <errorMessage>Please enter reason for Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Don_not_allow_to_select_archived_contact</fullName>
        <active>false</active>
        <errorConditionFormula>(EDI_Vendor_Name__r.Archive__c  = true)  || ( Vendor_Contact_Name__r.Archive__c = true)</errorConditionFormula>
        <errorMessage>Please do not select archived contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Type_of_Organization_Other</fullName>
        <active>true</active>
        <description>This is used to restrict the user to enter the Type of Organization Other field if Type Of Organization is Other</description>
        <errorConditionFormula>AND(ISPICKVAL(Type_of_Organization__c,&quot;Other&quot;),ISBLANK( Type_of_Organization_Other__c ))</errorConditionFormula>
        <errorDisplayField>Type_of_Organization_Other__c</errorDisplayField>
        <errorMessage>Please enter reason for Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunittyAccountNameValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Opportunity__r.AccountId != Opportunity_Account_Name__r.Id, true, false)</errorConditionFormula>
        <errorDisplayField>Opportunity_Account_Name__c</errorDisplayField>
        <errorMessage>Value can&apos;t be change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Medical_Region_on_Group_Type</fullName>
        <active>true</active>
        <description>This validation rule is used to allow the user to edit the Medical Region only when the Group Type is Small</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL( Group_Type__c ,&apos;Small&apos;)), NOT(ISBLANK(Medical_Region__c )))</errorConditionFormula>
        <errorDisplayField>Medical_Region__c</errorDisplayField>
        <errorMessage>Medical Region is allowed only for Small Group Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_SSO_Value_for_Small_Groups</fullName>
        <active>true</active>
        <description>This validation rule is used to restrict the user to not enter the SSO value when it is Small Group</description>
        <errorConditionFormula>AND(Opportunity__r.Employer_Type__c = &apos;Small Group (1-100)&apos;, Sold_Sign_Off__c  &lt;&gt; NULL)</errorConditionFormula>
        <errorDisplayField>Sold_Sign_Off__c</errorDisplayField>
        <errorMessage>SSO Value can be populated for only large groups</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_User_to_Edit_Renewal_Data</fullName>
        <active>true</active>
        <description>This validation rule is used to restrict the user to change the Renewal details on SCN if it is not a renewal SCN.</description>
        <errorConditionFormula>AND(Renewal_SCN__c != TRUE,OR(Have_the_plan_numbers_changed__c = true,New_TPA_Vendor__c= true,Will_there_be_additional_plans_offered__c = true,New_EDI_Vendor__c = true))</errorConditionFormula>
        <errorMessage>Renewal details are allowed to edit only for Renewal SCN.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Vendor_and_EDI_vendor_details</fullName>
        <active>true</active>
        <description>This validation rule is used to restrict the user from selecting Vendor Contact Details and EDI Vendor Contact details when Enrollment Method is other than Electronic</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Enrollment_Method__c,&apos;Electronic&apos;)),OR( NOT(ISBLANK(Vendor_Contact_Email__c)),NOT(ISBLANK( Vendor_Contact_Name__c )),NOT(ISBLANK( Vendor_Contact_Phone__c )),NOT(ISBLANK( EDI_Vendor_E_Mail__c )),NOT(ISBLANK( EDI_Vendor_Name__c )),NOT(ISBLANK( EDI_Vendor_Phone__c )),NOT(ISBLANK( Vendor_Name__c ))))</errorConditionFormula>
        <errorMessage>Vendor Details can be entered only when Enrollment Method is Electronic</errorMessage>
    </validationRules>
</CustomObject>